# kanban-rs

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20210812114705_create_boards.sql  20210812114709_create_cards.sql
migrations/2021-08-10-112305_create_boards/: down.sql  up.sql
migrations/2021-08-10-112401_create_cards/: up.sql
src/: db.rs  logger.rs  main.rs  models.rs  routes.rs  schema.rs
