[package]
name = "kanban-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.1.3"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
fern = "0.6.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "chrono", "postgres"] }
tokio = { version = "1", features = ["macros"] }
